[package]
name = "postal"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
iced = { version = "0.12.1", features = ["tokio", "debug", "canvas"] }
iced_futures = "0.12.0"
pnet = "0.35.0"
tokio = { version = "1.39.2", features = ["full"] }
tokio-macros = "2.2.0"
tokio-util = "0.7.11"
